# Raylib_Learning

./: CMakeLists.txt  clean.cmake
include/: ball.hpp  ball_position.hpp  collision.hpp  constants.hpp  empty_hitbox.hpp  game_manager.hpp  game_object.hpp  paddle.hpp
src/: ball.cpp  ball_position.cpp  collision.cpp  empty_hitbox.cpp  game_manager.cpp  game_object.cpp  main.cpp  paddle.cpp
